@@ -23,6 +23,6 @@ EBUILD gitlab-ce-8.12.0_rc6.ebuild 11943 SHA256 62bcdc0b04fd791be8ecb48529d0c097
 EBUILD gitlab-ce-8.12.7.ebuild 12068 SHA256 5acdce0ee5f3c6cf20a120758ad0c60ec70574d38cc2ee56037b3789d812edfd SHA512 7daf877280f4a8242fa83e1b70d5cabe99aa8bd547d0b4f9a4921c60c44228f508e39a8a4f751b987078c4d680aaff374a055c8ca5882b12f110b232c0006f4e WHIRLPOOL be51f8c53ac45db3c13f179d447665b536df4848a4c63cf5619d2620fbca7bd2701b861f636235d7e746ee7f560eb084e949288f11dceaaef826c138be321625
 EBUILD gitlab-ce-8.13.0.ebuild 11859 SHA256 b90393b330f1048ea73536071793f1897d62e14773bc170600abb9ab9dc0fcc0 SHA512 31c32936dbe355dc9dae68bb5b726822a9f5222796dd11dc95b8907fbb2e316930a95568061557328a9d87b5b5eded5867a1a8d552cd9041f10054140d461426 WHIRLPOOL 2ce6cf02c5b27fe70f00795c16fa3d20f369ba820f8583c90808ac5d6c1d838425d447caaad67b76ebc64e6a3f1b6866ac2e890566dc71504056c20103b8ad97
 EBUILD gitlab-ce-8.13.3.ebuild 11979 SHA256 b5a243613dbca1645c70b0b76191172d823a1775372172054c653706261dd1e7 SHA512 9121a34bb8f071395f26d0dbb87fb8bae50f00b8b606c1ced4d43d7e9908c7937fc5bd3d15992b34545206bcbf138e2ab1a593df709904b409ad9041b6a62f9a WHIRLPOOL d7c84308560a28e0222da75acad82cda660770acff43b180d40b35e6395f46adc66afb40ce3ba8c73dd76251e89f72b9dff51bc602c82154a1ea974f693104fa
-EBUILD gitlab-ce-9999.ebuild 12071 SHA256 6c265ee4d106ec9315c152a62b33c59c5b40decafc2b16ff0052f30d35a07810 SHA512 04533314f4f8a8b5a9e672267b47ef17020402d06399e515b2eb9a7653c5fc94349a3a4aff32bb22f666b7577a9538c1198edec15f5b026891e4ebf6ba0daffa WHIRLPOOL 9e1c4d2dbcfbd2de03f3cd6731cdd120f72d29ff7581aa40e612f946ec8d0b486d77cb2089706079eedc22792b7f1752f0554256ac9ec8b8241d4877a4fde499
-MISC ChangeLog 9685 SHA256 5aef92eeee62f86fc3804f3b140a0ca4268cdcc4a26eac7fc8b6a49693967e38 SHA512 b48611965329d6b01e526e84344c1f0cc8404483511e511e3140575e4a0166290224341734b3f10b33db623f59f18dd49da4e130f3ecea9a9490bc9e99f8e201 WHIRLPOOL d0b6d38ee0b8a11bc7e96136d003a516ee5591e558c4b6e11c293e74a1232905976d0cdda6a31bd4761681f6766a667fd5ffb0feb0b955c7a8e6d743bfa8fc4d
+EBUILD gitlab-ce-9999.ebuild 11913 SHA256 59e03c337984ef9363e1e20777c3057f958c20c97a8ae553fe463933570e22ac SHA512 f681ba98c41296b50a94301a8680951a8529020efd278747ccaa27c410cd92057ea03947d2d9918aa42802843189c6b93e4d19fe04e54f3b029b5a94c3676f79 WHIRLPOOL 5641e173c055027ab1c6800dd2c95297ac2d9007d8210f4f13d1644313086e01e0449c121ce9a9d9b5349a6a91c2db870b92449fb5609e00d7bc1f9cd2bd6a9c
+MISC ChangeLog 9814 SHA256 137f0e7e2b8bd9ce555f93bec7a830afbfda8bcd96b962d8aa52d53445e7ed53 SHA512 4cab13cc9abf7ee1429361346da7e539a0417571c6ef60b6c412bbf5e21cfb509dd87fb52ff5400d3e0a24b5baf2da710031c938dbdac100d1be3a18d8b40602 WHIRLPOOL 1f70871451a4a111c85e729828a364e5b8009dbf42d4f283bd206e72b5da9fea15b93575c4f26fb477a812f75a56c12252d8b0116c41e6790b05a562eee7f27a
 MISC metadata.xml 559 SHA256 6c3f48d3ef57c97bf27790f33ee04bd8de8b01597caa8a2a7a473d6d0a3c5759 SHA512 5aa340b5429795d84cd106ee673fd55a42fd4b0d3299d6b95c6a3e3d50812a9620820a4de5c57d5048af0c3ecec7f575d5856d2f7fadc210aadcbdd4dd040fe1 WHIRLPOOL f3d7b8c0522e09f5156e6bb446bb74e4c75f5da4495ca2ece1eb78afce59307abe01bf3c5dd5344278fcac9e334300d912031c806f51b981591c01bc3588c6f3
