@@ -1,3 +1,6 @@
+  03 Nov 2016; Manuel Friedli <manuel@fritteli.ch> gitlab-ce-9999.ebuild:
+  www-apps/gitlab-ce:  updated ebuild for gitlab-9999
+
 *gitlab-ce-8.13.3 (03 Nov 2016)
 
   03 Nov 2016; Manuel Friedli <manuel@fritteli.ch>
